--- a/src/Pricing.css
+++ b/src/Pricing.css
@@ -293,7 +293,7 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 18px;
-  color: #D85000;
+  color: #C85000;
   margin-bottom: 20px;
   text-transform: uppercase;
 }
