--- a/src/ServicesSection.css
+++ b/src/ServicesSection.css
@@ -187,11 +187,11 @@
 }
 
 .text-orange {
-  color: #D85000;
+  color: #C85000;
 }
 
 .text-light-orange {
-  color: #EE7A1D;
+  color: #C85000;
 }
 
 .max-w-400 { max-width: 406px; }
